test/valid/poly-array-assign.js

function setFirst(arr, val) { arr[0] = val; }

setFirst([1,2,3], 2);

setFirst(['a','b'], 'd');
