test/invalid/array-assign-in-func.js
function f(arr, x) {
    arr[0] = x;
}

var a = [1];
f(a, 's');
